2006-08-25  Kalpit Desai <kvdesai@email.unc.edu>
	* processpeak.m: More robust method of accurately locating the nearest point to the search frequency.

2006-05-29  Kalpit Desai <kvdesai@email.unc.edu>
	* myspectrogram.m: 
	- Replaced the input argument 'frequency resolution' by 'time resolution' because time resolution is more intuitive.
	- Instead of finest possible resolution, the default is now set to achieve best tradeoff between time resolution and frequency resolution.
	- Exposed one more output argument: PSD for each time segment

2006-05-27  Kalpit Desai <kvdesai@email.unc.edu>
	* mypsd.m: Fixed the crash when input signal had more columns than rows. Now if needed, warns the user and transposes the input matrix before computing psd.

2006-05-15  Kalpit Desai <kvdesai@email.unc.edu>
	* mypsd.m: Fixed a bug in calculation of default frequency resolution.
	* myspectrogram.m: same.
	* processpeak.m: Better handling of boundary cases. Also fixed a bug that caused program to return zero values when search frequency falled exactly between two bins.

2006-05-05  Kalpit Desai <kvdesai@email.unc.edu>
	* myspectrogram.m: Added. This function wraps the matlab-inbuilt 'spectrogram' function with parameters that are easy to understand for the user. Analogous to 'mypsd' and 'mytfe'.

2006-04-03  Jeremy Cribb <jcribb@email.unc.edu>
	* mypsd.m: fixed typo in printed output.

2005-12-22  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m: 
	- Calculation of 'integrated displacement' is much efficient now.
	- Last argument, flag for calculating id, is now obsolete and ignored.
	- Improved documentation

2005-09-24  Kalpit Desai <kvdesai@cs.unc.edu>
	* processpeak.m: Made interactive. 

2005-09-13  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m: 
	- Made to exit gracefully and report some plain english errors when input parameters are inconsistent. 
	- Fixed some comments.
2005-09-08  Kalpit Desai <kvdesai@cs.unc.edu>