@@ -1,3 +1,9 @@
+2008-11-14 Kris Ford <krisford@email.unc.edu>
+	* .cvsignore: added
+	* mypsd.m: modified documentation to better match Mathworks convention
+	* myspectrogram.m: same
+	* thd.m: same
+
 2006-08-25  Kalpit Desai <kvdesai@email.unc.edu>
 	* processpeak.m: More robust method of accurately locating the nearest point to the search frequency.
 
